"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-02-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-03:
	  Slight redesign of prsim::channel structure, allowing for
		concurrent non-conflicting modes of operation.
		Handful of new channel commands: stop, release, 
			source, sink, expect, log (-all variants).
	  Added basic test case.


2008-02-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-02:
	  More channel development.
	  Can now declare a channel, but not do anything with it yet.


2008-02-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-01:
	  This branch is for the development of the long awaited
		channel features in prsim.
	  Initial revision is incomplete (link-fail), work in progress.
	  Added sim/prsim/Channel-prsim.{h,cc}


2008-02-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38:
	  cflat -strengths now also computes strongest-single-path
		drive strength ('one'), along with min,max.
	  Test cases updated.


2008-02-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-37:
	  Experimental: cflat mode to compute and print minimum
		and maximum drive strengths for every rule.
		Documented, and somewhat tested.
	  prs macros: turned off negative value checking for macros
		as a temporary workaround to support strength deduction
		AND prs-literal extra (bogus) parameter for transistor type.


2008-02-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-36:
	  prsim command: 'why-not', recursively figures out why a
		node is NOT a given value, following fanins and exprs.
		This pretty much performs deadlock analysis, 
		and any other query for "why isn't this doing what I