@@ -6,7 +6,7 @@
 	Define a channel type map to make automatic!
 	auto-channel (based on consumer/producer connectivity), 
 	top-level only!
-	$Id: Channel-prsim.h,v 1.1.2.3 2008/02/17 02:20:40 fang Exp $
+	$Id: Channel-prsim.h,v 1.1.2.4 2008/02/17 22:15:25 fang Exp $
  */
 
 #ifndef	__HAC_SIM_PRSIM_CHANNEL_H__
@@ -22,6 +22,12 @@
 #include "util/utypes.h"
 #include "util/macros.h"
 #include "util/memory/count_ptr.h"
+
+#define	PACKED_ARRAY_DATA_RAILS			1
+
+#if PACKED_ARRAY_DATA_RAILS
+#include "util/packed_array.h"
+#endif
 
 /**
 	Define to 1 to add support for channel validity, for example
@@ -39,11 +45,22 @@ using std::istream;
 using std::ofstream;
 using entity::int_value_type;
 using util::memory::count_ptr;
+#if PACKED_ARRAY_DATA_RAILS
+using util::packed_array;
+#endif
 class State;
 class channel;
 class channel_manager;
 
 typedef	node_index_type				channel_index_type;
+
+/**
+	pair: node_index, next value
+	Events generated by the environment, channel sources and sinks.  
+	The simulator state will convert these to events
+	in the primary event queue.  
+ */
+typedef	std::pair<node_index_type, uchar>	env_event_type;
 
 //=============================================================================
 /**
@@ -56,35 +73,9 @@ class channel_file_handle {
 	friend class channel;
 	string					fname;
 	count_ptr<ofstream>			stream;
-#if 0
-	enum __flags {
-		CHANNEL_FILE_READ = 		0x01,
-		CHANNEL_FILE_WRITE = 		0x02,
-		CHANNEL_FILE_APPEND = 		0x04,
-		/// if true, re-open file at EOF (unused)
-		CHANNEL_FILE_LOOP = 		0x08
-	};
-	// flags
-	uchar					flags;
-#endif
 public:
 	channel_file_handle();
 	~channel_file_handle();
-#if 0
-
-	bool
-	is_reading(void) const {
-		return flags & CHANNEL_FILE_READ;
-	}
-
-	bool
-	is_writing(void) const {
-		return flags & CHANNEL_FILE_WRITE;
-	}
-
-	bool
-	open_read(const string&);
-#endif
 
 	// append?
 	bool
@@ -168,8 +159,6 @@ class channel {
 	node_index_type				valid_signal;
 #endif
 
-	// is valarray copy-safe? who cares for now...
-	typedef	vector<node_index_type>		rails_array_type;
 	/**
 		General attribute and mode flags.  
 	 */
@@ -183,10 +172,14 @@ class channel {
 		at a time.
 		invariant: [return-to-zero] counter must monotonically
 		increase/decrease between 0 and M, the nmuber of bundles.  
+		Limit: 255
 	 */
 	uchar					counter_state;
 	/**
-		Counts the number of X data rails.  
+		Assuming that completetion detection is contingent 
+		upon there being no unknowns, we can count unknowns
+		to model unknown behavior.  
+		Counts the number of X data rails.  (Limit: 255)
 	 */
 	uchar					x_counter;
 	/**
@@ -194,7 +187,17 @@ class channel {
 		Size of each element is the radix of the data rails.
 		TODO: use packed_array<T, 2>!!
 	 */
-	vector<rails_array_type>		data;
+#if PACKED_ARRAY_DATA_RAILS
+	typedef	util::packed_array<2, size_t, node_index_type>
+						data_bundle_array_type;
+	typedef	data_bundle_array_type::key_type
+						data_rail_index_type;
+#else
+	// is valarray copy-safe? who cares for now...
+	typedef	vector<node_index_type>		rails_array_type;
+	typedef	vector<rails_array_type>	data_bundle_array_type;
+#endif
+	data_bundle_array_type			data;
 	/**
 		Inject/expect files don't need to persist
 		once they are loaded into values.  
@@ -223,7 +226,11 @@ class channel {
 	size_t					value_index;
 private:
 	// optional: reverse lookup map: node -> bundle, rail
+#if PACKED_ARRAY_DATA_RAILS
+	typedef	std::map<node_index_type, data_rail_index_type>
+#else
 	typedef	std::map<node_index_type, std::pair<size_t, size_t> >
+#endif
 						data_rail_map_type;
 	data_rail_map_type			__node_to_rail;
 
@@ -232,15 +239,45 @@ public:
 	~channel();
 
 	size_t
-	bundles(void) const { return data.size(); }
+	bundles(void) const {
+#if PACKED_ARRAY_DATA_RAILS
+		return data.size()[0];
+#else
+		return data.size();
+#endif
+	}
 
 	size_t
 	radix(void) const {
+#if PACKED_ARRAY_DATA_RAILS
+		return data.size()[1];
+#else
 		INVARIANT(data.size());
 		return data.front().size();
+#endif
 	}
 
 private:
+	bool
+	alias_data_rails(const node_index_type) const;
+
+	int_value_type
+	next_value(void);	// post-increments index
+
+	bool
+	set_ack_signal(const node_index_type ai) {
+		ack_signal = ai;
+		return alias_data_rails(ai);
+	}
+
+#if PRSIM_CHANNEL_VALIDITY
+	bool
+	set_valid_signal(const node_index_type vi) {
+		valid_signal = vi;
+		return alias_data_rails(vi);
+	}
+#endif
+
 	void
 	set_ack_active(const bool h) {
 		if (h)	flags |= CHANNEL_ACK_ACTIVE_SENSE;
@@ -330,7 +367,8 @@ public:
 	initialize_data_counter(const State&);
 
 	void
-	process_node(const node_index_type, const uchar val);
+	process_node(const node_index_type, const uchar, const uchar, 
+		vector<env_event_type>&);
 
 #if 0
 private:
@@ -436,6 +474,10 @@ public:
 
 	void
 	resume_all_channels(void);
+
+	void
+	process_node(const node_index_type, const uchar, const uchar, 
+		vector<env_event_type>&);
 
 	ostream&
 	dump_memory_usage(ostream&) const;
